--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ management.prometheus.metrics.export.enabled=true
 management.info.git.mode=full
 endpoints.health.sensitive=false
 management.security.enabled=false
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
