--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,5 @@ kotlinVersion=1.9.20
 kotlinSpringVersion=1.9.20
 retrofitVersion=2.9.0
 okhttpVersion=4.10.0
+springRedisVersion=3.2.2
+jedisVersion=5.1.0
