--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ management.security.enabled=false
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
+
+spring.redis.host=${REDIS_HOST:redis}
+spring.redis.port=${REDIS_PORT:6379}
