[Done] Improve cache Setup Docker-compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,6 @@ management.security.enabled=false
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 
-spring.redis.host=${REDIS_HOST:redis}
+spring.redis.host=${REDIS_HOST:localhost}
 spring.redis.port=${REDIS_PORT:6379}
+spring.redis.password=${REDIS_PASS:eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81}
